// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */

=====================================output=====================================
/* @flow */

================================================================================
`;

exports[`index.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @flow */
require('A');

=====================================output=====================================
/* @flow */
require("A");

================================================================================
`;
